Bug 1203405 - Ignore order of abs/fixed-pos frames in the frame list. r=roc